# easymcpialpha

./: LICENSE  Mcpi.pptx  __init__.py  code.py  easymcpi.py  project.py  pyproject.toml
